--- a/templates/project/package.json.tt
+++ b/templates/project/package.json.tt
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "dashing-js": "~{{= dashing.version }}"
+    "dashing-js": "angli-socrata/dashing-js"
   },
   "engine": "node >= 0.10"
 }
